time 2 sleep. night!

--- a/generate_transition.ipynb
+++ b/generate_transition.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,17 +409,15 @@
     "            progress_bar.update()\n",
     "            return ret\n",
     "\n",
-    "        set_loky_pickler('pickle')\n",
     "        r = Parallel(n_jobs=n_jobs, prefer=\"processes\")(\n",
     "            delayed(uuu)(i) for i in contents\n",
     "        )\n",
-    "        set_loky_pickler()\n",
     "        return r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,9 +431,221 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(973230, {'from_index': 138113, 'to_index': 138113, 'dice': 0, 'next_player': 2})\n",
+      "Took 0:00:00.000623\n",
+      "Tries: 26\n",
+      "(973237, {'from_index': 138113, 'to_index': 16914177, 'dice': 3, 'next_player': 2})\n",
+      "Took 0:00:00.000952\n",
+      "Tries: 26\n",
+      "(973230, [{'from_index': 138113, 'to_index': 138113, 'dice': 0, 'next_player': 2}, {'from_index': 138113, 'to_index': 33683905, 'dice': 1, 'next_player': 2}, {'from_index': 138113, 'to_index': 33692225, 'dice': 1, 'next_player': 2}, {'from_index': 138113, 'to_index': 33663169, 'dice': 2, 'next_player': 2}, {'from_index': 138113, 'to_index': 33691457, 'dice': 2, 'next_player': 2}, {'from_index': 138113, 'to_index': 16914945, 'dice': 2, 'next_player': 2}, {'from_index': 138113, 'to_index': 33600961, 'dice': 3, 'next_player': 2}, {'from_index': 138113, 'to_index': 16914177, 'dice': 3, 'next_player': 2}, {'from_index': 138113, 'to_index': 8526337, 'dice': 3, 'next_player': 1}, {'from_index': 138113, 'to_index': 33682241, 'dice': 4, 'next_player': 2}, {'from_index': 138113, 'to_index': 8525569, 'dice': 4, 'next_player': 1}, {'from_index': 138113, 'to_index': 137729, 'dice': 4, 'next_player': 2}])\n",
+      "Took 0:00:00.001253\n",
+      "Tries: 26\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import datetime\n",
+    "\n",
+    "\n",
+    "class BinarySearchData:\n",
+    "    def __init__(self, file):\n",
+    "        self.file = file\n",
+    "        self.file_size = os.path.getsize(file)\n",
+    "        self.amt_of_rows = self.file_size // 10\n",
+    "        self.handle = open(self.file, \"rb\")\n",
+    "\n",
+    "    def search_any(self, search_value):\n",
+    "        self.tries = 0\n",
+    "        search_value = search_value.to_bytes(4, \"big\")\n",
+    "        f = self.handle\n",
+    "        start = 0\n",
+    "        end = self.amt_of_rows\n",
+    "        middle = (start + end) // 2\n",
+    "        f.seek(middle * 10)\n",
+    "        row = f.read(10)\n",
+    "        int_ = row[:4]\n",
+    "        while int_ != search_value and start < end:\n",
+    "            if search_value < int_:\n",
+    "                end = middle\n",
+    "            else:\n",
+    "                start = middle + 1\n",
+    "            middle = (start + end) // 2\n",
+    "            f.seek(middle * 10)\n",
+    "            row = f.read(10)\n",
+    "            int_ = row[:4]\n",
+    "            self.tries += 1\n",
+    "        if int_ == search_value:\n",
+    "            from_index = int.from_bytes(int_, \"big\")\n",
+    "            to_index = int.from_bytes(row[4:8], \"big\")\n",
+    "            dice = int.from_bytes(row[8:9], \"big\")\n",
+    "            next_player = int.from_bytes(row[9:10], \"big\", signed=True)\n",
+    "            return middle, {\"from_index\": from_index, \"to_index\": to_index, \"dice\": dice, \"next_player\": next_player}\n",
+    "        return None, None\n",
+    "\n",
+    "    def search_first(self, search_value):\n",
+    "        self.tries = 0\n",
+    "        search_value = search_value.to_bytes(4, \"big\")\n",
+    "        f = self.handle\n",
+    "        start = 0\n",
+    "        end = self.amt_of_rows\n",
+    "        middle = (start + end) // 2\n",
+    "        f.seek(middle * 10)\n",
+    "        row = f.read(10)\n",
+    "        int_ = row[:4]\n",
+    "        while int_ != search_value and start < end:\n",
+    "            if search_value < int_:\n",
+    "                end = middle\n",
+    "            else:\n",
+    "                start = middle + 1\n",
+    "            middle = (start + end) // 2\n",
+    "            f.seek(middle * 10)\n",
+    "            row = f.read(10)\n",
+    "            int_ = row[:4]\n",
+    "            self.tries += 1\n",
+    "        if int_ == search_value:\n",
+    "            # make sure to find the first occurrence\n",
+    "            while middle > 0:\n",
+    "                f.seek((middle - 1) * 10)\n",
+    "                row = f.read(10)\n",
+    "                int_ = row[:4]\n",
+    "                if int_ != search_value:\n",
+    "                    break\n",
+    "                middle -= 1\n",
+    "            f.seek(middle * 10)\n",
+    "            row = f.read(10)\n",
+    "            int_ = row[:4]\n",
+    "            from_index = int.from_bytes(int_, \"big\")\n",
+    "            to_index = int.from_bytes(row[4:8], \"big\")\n",
+    "            dice = int.from_bytes(row[8:9], \"big\")\n",
+    "            next_player = int.from_bytes(row[9:10], \"big\", signed=True)\n",
+    "            return middle, {\"from_index\": from_index, \"to_index\": to_index, \"dice\": dice, \"next_player\": next_player}\n",
+    "        return None, None\n",
+    "\n",
+    "    def search_all(self, search_value):\n",
+    "        self.tries = 0\n",
+    "        search_value = search_value.to_bytes(4, \"big\")\n",
+    "        f = self.handle\n",
+    "        start = 0\n",
+    "        end = self.amt_of_rows\n",
+    "        middle = (start + end) // 2\n",
+    "        f.seek(middle * 10)\n",
+    "        row = f.read(10)\n",
+    "        int_ = row[:4]\n",
+    "        while int_ != search_value and start < end:\n",
+    "            if search_value < int_:\n",
+    "                end = middle\n",
+    "            else:\n",
+    "                start = middle + 1\n",
+    "            middle = (start + end) // 2\n",
+    "            f.seek(middle * 10)\n",
+    "            row = f.read(10)\n",
+    "            int_ = row[:4]\n",
+    "            self.tries += 1\n",
+    "        if int_ == search_value:\n",
+    "            # make sure to find the first occurrence\n",
+    "            while middle > 0:\n",
+    "                f.seek((middle - 1) * 10)\n",
+    "                row = f.read(10)\n",
+    "                int_ = row[:4]\n",
+    "                if int_ != search_value:\n",
+    "                    break\n",
+    "                middle -= 1\n",
+    "            f.seek(middle * 10)\n",
+    "            row = f.read(10)\n",
+    "            int_ = row[:4]\n",
+    "            # accumulate all occurrences\n",
+    "            first_middle = middle\n",
+    "            results = []\n",
+    "            while int_ == search_value:\n",
+    "                from_index = int.from_bytes(int_, \"big\")\n",
+    "                to_index = int.from_bytes(row[4:8], \"big\")\n",
+    "                dice = int.from_bytes(row[8:9], \"big\")\n",
+    "                next_player = int.from_bytes(row[9:10], \"big\", signed=True)\n",
+    "                results.append({\"from_index\": from_index, \"to_index\": to_index, \"dice\": dice, \"next_player\": next_player})\n",
+    "                middle += 1\n",
+    "                f.seek(middle * 10)\n",
+    "                row = f.read(10)\n",
+    "                int_ = row[:4]\n",
+    "            return first_middle, results\n",
+    "        return None, None\n",
+    "\n",
+    "\n",
+    "starttime = datetime.datetime.now()\n",
+    "\n",
+    "file = \"lut_transition_merge_sort/round_8/output_0.data\"\n",
+    "\n",
+    "search_value = 138113\n",
+    "\n",
+    "search = BinarySearchData(file)\n",
+    "print(search.search_first(search_value))\n",
+    "print(\"Took\", datetime.datetime.now() - starttime)\n",
+    "print(\"Tries:\", search.tries)\n",
+    "\n",
+    "print(search.search_any(search_value))\n",
+    "print(\"Took\", datetime.datetime.now() - starttime)\n",
+    "print(\"Tries:\", search.tries)\n",
+    "\n",
+    "print(search.search_all(search_value))\n",
+    "print(\"Took\", datetime.datetime.now() - starttime)\n",
+    "print(\"Tries:\", search.tries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b41 = do_query(\"SELECT lut_index FROM boardstate_lut_expanded_int_values WHERE B4 = 1;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/38995732 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "PicklingError",
+     "evalue": "Could not pickle the task to send it to the workers.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31m_RemoteTraceback\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;31m_RemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/home/raph/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/externals/loky/backend/queues.py\", line 159, in _feed\n    obj_ = dumps(obj, reducers=reducers)\n  File \"/home/raph/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/externals/loky/backend/reduction.py\", line 215, in dumps\n    dump(obj, buf, reducers=reducers, protocol=protocol)\n  File \"/home/raph/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/externals/loky/backend/reduction.py\", line 208, in dump\n    _LokyPickler(file, reducers=reducers, protocol=protocol).dump(obj)\nAttributeError: Can't pickle local object 'embarrassing2.<locals>.uuu'\n\"\"\"",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mPicklingError\u001b[0m                             Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[26], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mf\u001b[39m(i):\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m search\u001b[38;5;241m.\u001b[39msearch_any(i)\n\u001b[0;32m----> 6\u001b[0m \u001b[43membarrassing2\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb41\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlut_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mf\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[25], line 14\u001b[0m, in \u001b[0;36membarrassing2\u001b[0;34m(contents, callback, n_jobs)\u001b[0m\n\u001b[1;32m     11\u001b[0m     progress_bar\u001b[38;5;241m.\u001b[39mupdate()\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m ret\n\u001b[0;32m---> 14\u001b[0m r \u001b[38;5;241m=\u001b[39m \u001b[43mParallel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn_jobs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mn_jobs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprefer\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mprocesses\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdelayed\u001b[49m\u001b[43m(\u001b[49m\u001b[43muuu\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mcontents\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m r\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/parallel.py:1952\u001b[0m, in \u001b[0;36mParallel.__call__\u001b[0;34m(self, iterable)\u001b[0m\n\u001b[1;32m   1946\u001b[0m \u001b[38;5;66;03m# The first item from the output is blank, but it makes the interpreter\u001b[39;00m\n\u001b[1;32m   1947\u001b[0m \u001b[38;5;66;03m# progress until it enters the Try/Except block of the generator and\u001b[39;00m\n\u001b[1;32m   1948\u001b[0m \u001b[38;5;66;03m# reach the first `yield` statement. This starts the aynchronous\u001b[39;00m\n\u001b[1;32m   1949\u001b[0m \u001b[38;5;66;03m# dispatch of the tasks to the workers.\u001b[39;00m\n\u001b[1;32m   1950\u001b[0m \u001b[38;5;28mnext\u001b[39m(output)\n\u001b[0;32m-> 1952\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m output \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_generator \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43moutput\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/parallel.py:1595\u001b[0m, in \u001b[0;36mParallel._get_outputs\u001b[0;34m(self, iterator, pre_dispatch)\u001b[0m\n\u001b[1;32m   1592\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m\n\u001b[1;32m   1594\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backend\u001b[38;5;241m.\u001b[39mretrieval_context():\n\u001b[0;32m-> 1595\u001b[0m         \u001b[38;5;28;01myield from\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_retrieve()\n\u001b[1;32m   1597\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mGeneratorExit\u001b[39;00m:\n\u001b[1;32m   1598\u001b[0m     \u001b[38;5;66;03m# The generator has been garbage collected before being fully\u001b[39;00m\n\u001b[1;32m   1599\u001b[0m     \u001b[38;5;66;03m# consumed. This aborts the remaining tasks if possible and warn\u001b[39;00m\n\u001b[1;32m   1600\u001b[0m     \u001b[38;5;66;03m# the user if necessary.\u001b[39;00m\n\u001b[1;32m   1601\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_exception \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/parallel.py:1699\u001b[0m, in \u001b[0;36mParallel._retrieve\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1692\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_wait_retrieval():\n\u001b[1;32m   1693\u001b[0m \n\u001b[1;32m   1694\u001b[0m     \u001b[38;5;66;03m# If the callback thread of a worker has signaled that its task\u001b[39;00m\n\u001b[1;32m   1695\u001b[0m     \u001b[38;5;66;03m# triggered an exception, or if the retrieval loop has raised an\u001b[39;00m\n\u001b[1;32m   1696\u001b[0m     \u001b[38;5;66;03m# exception (e.g. `GeneratorExit`), exit the loop and surface the\u001b[39;00m\n\u001b[1;32m   1697\u001b[0m     \u001b[38;5;66;03m# worker traceback.\u001b[39;00m\n\u001b[1;32m   1698\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_aborting:\n\u001b[0;32m-> 1699\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_raise_error_fast\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1700\u001b[0m         \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m   1702\u001b[0m     \u001b[38;5;66;03m# If the next job is not ready for retrieval yet, we just wait for\u001b[39;00m\n\u001b[1;32m   1703\u001b[0m     \u001b[38;5;66;03m# async callbacks to progress.\u001b[39;00m\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/parallel.py:1734\u001b[0m, in \u001b[0;36mParallel._raise_error_fast\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1730\u001b[0m \u001b[38;5;66;03m# If this error job exists, immediatly raise the error by\u001b[39;00m\n\u001b[1;32m   1731\u001b[0m \u001b[38;5;66;03m# calling get_result. This job might not exists if abort has been\u001b[39;00m\n\u001b[1;32m   1732\u001b[0m \u001b[38;5;66;03m# called directly or if the generator is gc'ed.\u001b[39;00m\n\u001b[1;32m   1733\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m error_job \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1734\u001b[0m     \u001b[43merror_job\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_result\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/parallel.py:736\u001b[0m, in \u001b[0;36mBatchCompletionCallBack.get_result\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    730\u001b[0m backend \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparallel\u001b[38;5;241m.\u001b[39m_backend\n\u001b[1;32m    732\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m backend\u001b[38;5;241m.\u001b[39msupports_retrieve_callback:\n\u001b[1;32m    733\u001b[0m     \u001b[38;5;66;03m# We assume that the result has already been retrieved by the\u001b[39;00m\n\u001b[1;32m    734\u001b[0m     \u001b[38;5;66;03m# callback thread, and is stored internally. It's just waiting to\u001b[39;00m\n\u001b[1;32m    735\u001b[0m     \u001b[38;5;66;03m# be returned.\u001b[39;00m\n\u001b[0;32m--> 736\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_return_or_raise\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    738\u001b[0m \u001b[38;5;66;03m# For other backends, the main thread needs to run the retrieval step.\u001b[39;00m\n\u001b[1;32m    739\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "File \u001b[0;32m~/.cache/pypoetry/virtualenvs/ur-lut-visualizer-OffVFizb-py3.10/lib/python3.10/site-packages/joblib/parallel.py:754\u001b[0m, in \u001b[0;36mBatchCompletionCallBack._return_or_raise\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    752\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    753\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstatus \u001b[38;5;241m==\u001b[39m TASK_ERROR:\n\u001b[0;32m--> 754\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_result\n\u001b[1;32m    755\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_result\n\u001b[1;32m    756\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n",
+      "\u001b[0;31mPicklingError\u001b[0m: Could not pickle the task to send it to the workers."
+     ]
+    }
+   ],
+   "source": [
+    "for index in b41.lut_index:\n",
+    "    search.search_any(index)"
+   ]
   },
   {
    "cell_type": "code",
